--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ azure-search-documents==11.5.3
 azure-storage-blob==12.26.0
 pymongo==4.13.2
 langchain==0.3.26
-langchain-openai
+langchain-openai==0.3.28
 langchain-community==0.3.26
 langchain-mcp-adapters==0.1.8
 langgraph==0.5.2
