--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,12 @@ __pycache__/
 
 # Ignore all log files
 *.log
+
+# chainlit specific files
+.chainlit/
+.files/
+chainlit.md
+
+# Ignore Python bytecode files
+*.pyc
+test_*.py
